resources/css/style.css
/* Universal */

html {
    font-size: 16px;
}


h1, h2, h3, h4, h5, h6 {
    font-family: 'Oswald', sans-serif;
    font-weight: 400;
}

h1 {
    font-size: 2.625rem;
}

h2 {
    font-size: 2.063rem;
}

h3 {
    font-size: 1.625rem;
}

h4 {
    font-size: 1.25rem;
}

h5 {
    font-size: 1rem;
}

h6 {
    font-size: .813rem;
}

p {
    font-family: 'Cardo', serif;
}

/* header */

header {
    display: grid;
    grid-template: 50px / repeat(12, 1fr);
    column-gap: .25rem;
    align-items: center;
    max-width: 1920px;
    margin: auto;
}

.logo {
    grid-area: 1 / 1 / 2 / 3;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 2.5rem;
}

.logo img {
    padding-right: 1rem;
}

.nav {
    grid-area: 1 / 7 / 2 / 13;
    padding-right: 2.5rem;
}

.nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.hamburger {
    display: none;
}
/* body */

main {
    max-width: 1920px;
    margin: auto;
}

.container {
    display: grid;
    grid-template: repeat(24, 1fr) / repeat(12, 1fr);
    column-gap: .8rem;
    row-gap: 2rem;
    justify-content: center;
    align-items: center;
}

/* title section */

.title {
    grid-area: 4 / 2 / 6 / 5;
}

/* picture */

.picture {
    grid-area: 2 / 7 / 8 / 12;
    margin: auto;
}

/* about me */

.about-me {
    grid-area: 10 / 2 / 12 / 7;
    align-self: flex-start;
}

/* skills */

.skills {
    grid-area: 10 / 7 / 12 / 12;
    align-self: flex-start;
}

.skills .icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    row-gap: 1rem;
}

.skills .icon {
    margin-right: 2rem;
}

/* Projects */

.projects {
    grid-area: 12 / 2 / 20 / 12;
}

.projects .cards {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    row-gap: 2rem;
    width: 100%;
}

.projects .cards .card {
    width: 30%;
    min-width: 14rem;
    height: 250px;
    margin-right: 3%;
}

/* contact */


.contact {
    grid-area: 20 / 2 / 22 / 12;
}

/* footer */

footer {
    display: grid;
    grid-template: 75px / repeat(12, 1fr);
    margin: auto;
    max-width: 1920px;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.copyright {
    grid-area: 1 / 10 / 2 / 12;
}


/* temp formatting */

body * {
    border: blue 1px solid;
}

